--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/writing">Writing</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -20,6 +20,20 @@
 				<p>I'm an anthropologist of medicine, science, and urban India. <a href="/about">Read more here</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+		<div class="row">
+  <div class="column"></div>
+  <div class="column"></div>
+</div>
+		.row {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
+}
+		
+		
 		<footer>
     		<ul>
         		<li><a href="mailto:harris.solomon@duke.edu">email</a></li>
