--- a/index.html
+++ b/index.html
@@ -22,17 +22,14 @@
 		</div><!-- /.container -->
 		
 		<div class="row">
-  <div class="column"></div>
-  <div class="column"></div>
+  			<div class="column">
+				<h3>My book, Metabolic Living, details the rise of metabolic illness in urban India.</h3>
+			</div>
+ 			<div class="column">
+				<h3>I teach in the Department of Cultural Anthropology at Duke University.</h3>
+			</div>
 </div>
-		.row {
-    display: flex;
-}
-
-.column {
-    flex: 50%;
-}
-		
+			
 		
 		<footer>
     		<ul>
