--- a/index.html
+++ b/index.html
@@ -21,16 +21,39 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
-		<div class="row">
-  			<div class="column">
-				<h3>My book, Metabolic Living, details the rise of metabolic illness in urban India.</h3>
-			</div>
- 			<div class="column">
-				<h3>I teach in the Department of Cultural Anthropology at Duke University.</h3>
-			</div>
+
+<style>
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; 
+}
+
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column">
+    <p>My book, Metabolic Living, details the rise of metabolic illness in urban India.</p>
+  </div>
+  <div class="column">
+    <p>I teach in the Department of Cultural Anthropology at Duke University.</p>
+  </div>
 </div>
-			
-		
+	
+	
 		<footer>
     		<ul>
         		<li><a href="mailto:harris.solomon@duke.edu">email</a></li>
