--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div class="row">
   <div class="column">
-    <p>My book, Metabolic Living, details the rise of metabolic illness in urban India.</p>
+    <p style="font-size:160%;">My book, Metabolic Living, details the rise of metabolic illness in urban India.</p>
   </div>
   <div class="column">
     <p>I teach in the Department of Cultural Anthropology at Duke University.</p>
