--- a/index.html
+++ b/index.html
@@ -22,7 +22,25 @@
 		</div><!-- /.container -->
 		
 
-<body>
+
+<style>
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 0px;
+    height: 300px; 
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+</style>
 
 <div class="row">
   <div class="column">
@@ -37,7 +55,8 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:harris.solomon@duke.edu">email</a></li>
-        		<li><a href="https://github.com/harrissolomon">github.com/harrissolomon</a></li>
+			<li><a href="https://twitter.com/harrissolomon">twitter</a></li>
+        		<li><a href="https://scholars.duke.edu/person/harris.solomon">Duke</a></li>
 			</ul>
 		</footer>
 	</body>
