--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Harris Solomon</h1>
-				<p>I'm an anthropologist of medicine, science, and urban India. <a href="/about">Read more here</a></p>
+			<p><b>I'm an anthropologist of medicine, science, and urban India.</b> <a href="/about">Read more here</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
@@ -44,10 +44,10 @@
 
 <div class="row">
   <div class="column">
-    <p style="font-size:98%;">My book, Metabolic Living, details the rise of metabolic illness in urban India.</p>
+    <p>My book, Metabolic Living, details the rise of metabolic illness in urban India.</p>
   </div>
   <div class="column">
-    <p style="font-size:98%;">I teach in the Department of Cultural Anthropology at Duke University.</p>
+    <p>I teach in the Department of Cultural Anthropology at Duke University.</p>
   </div>
 </div>
 	
