--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Harris Solomon</h1>
-			<p><b>I'm an anthropologist of medicine, science, and urban India.</b> <a href="/about">Read more here</a></p>
+			<p><b>I'm an anthropologist of medicine, science, and urban India.</b> <a href="/about"></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
@@ -44,7 +44,7 @@
 
 <div class="row">
   <div class="column">
-    <p>My book, Metabolic Living, details the rise of metabolic illness in urban India.</p>
+	  <p>My book, <li><a href="https://www.dukeupress.edu/metabolic-living">Metabolic Living</a></li>, details the rise of metabolic illness in urban India.</p>
   </div>
   <div class="column">
     <p>I teach in the Department of Cultural Anthropology at Duke University.</p>
