--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Harris Solomon</h1>
-			<p><b>I'm an anthropologist of medicine, science, and urban India.</b> <a href="/about"></p>
+			<p><b>I'm an anthropologist of medicine, science, and urban India.</b> 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
