--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
 <div class="row">
   <div class="column">
-	  <p>My book,<a href="https://www.dukeupress.edu/metabolic-living">Metabolic Living</a>, details the rise of metabolic illness in urban India.</p>
+	  <p>My book, <a href="https://www.dukeupress.edu/metabolic-living">Metabolic Living</a>, details the rise of metabolic illness in urban India. I am currently researching and writing about traumatic injuries from traffic accidents in Mumbai.</p>
+	  <br>
+	  <p>Across these projects and others, I'm interested in connections between the body and its environments in contemporary India.</p>
   </div>
   <div class="column">
-    <p>I teach in the Department of Cultural Anthropology at Duke University.</p>
+    <p>I teach in the <a href="https://culturalanthropology.duke.edu/">Department of Cultural Anthropology</a> at Duke University.</p>
   </div>
 </div>
 	
